koodi_relation_enpoint (#227)